[package]
name = "music-bio"
version = "0.1.0"
authors = ["Ving <viing937@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
actix = "0.10"
actix-web = { version = "3.3", features = ["openssl"] }
actix-web-actors = "3.0"
dotenv = "0.15"
url = "2.2"
openssl = "0.10"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
derive_more = "0.99"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4"
r2d2 = "0.8"
