[package]
name = "music-bio"
version = "0.1.0"
authors = ["Ving <viing937@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
env_logger = "0.8.2"
actix = "0.10.0"
actix-web = { version = "3.3.2", features = ["openssl"] }
dotenv = "0.15.0"
url = "2.2.0"
openssl = "0.10.32"
serde = "1.0.123"
serde_json = "1.0.61"
hex = "0.4.2"
thiserror = "1.0.23"
diesel = { version = "1.4.5", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
